# meshcore-prometheus-exporter

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: release-main.yml
dashboards/: meshcore.json
deploy/systemd/: meshcore-prom-exporter.env.example  meshcore-prom-exporter.service
scripts/: build_and_install_systemd.sh
src/meshcore_prom_exporter/: __init__.py  __main__.py  exporter.py  main.py  service.py
src/meshcore_prom_exporter.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_exporter_metrics.py  test_service.py
