[project]
name = "meshcore-prom-exporter"
version = "0.1.0"
description = "Prometheus exporter for meshcore telemetry via meshcore-cli"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "prometheus-client>=0.20.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[project.scripts]
meshcore-prom-exporter = "meshcore_prom_exporter.main:main"

[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
